feat: add consumer

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PRODUCER_TOPIC="entrada"
-CONSUMER_TOPIC="saida"
+TOPIC_1="topico_1"
 BROKERS="localhost:9092"
 GROUP="my-group"
 GROUP_ID="my-group-ID"
-SERVER_PORT="3000"
+PRODUCER_SERVER_PORT="3000"
+CONSUMER_SERVER_PORT="4000"
